remoção de props não usadas
